Villanova_Dev1/src/objects/VEM_Event__c.object
<CustomObject>
    <description>List of Villanova University planned events</description>
    <fields>
        <fullName>Display_on_Calendar__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck for special events that should not be displayed on the calendar</inlineHelpText>
        <label>Display on Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMS_Booking_ID__c</fullName>
        <externalId>true</externalId>
        <label>EMS Booking ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <picklist>
            <controllingField>Time_Interval__c</controllingField>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <inlineHelpText>Enter up to 255 characters</inlineHelpText>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <referenceTo>VEM_Location__c</referenceTo>
        <relationshipName>Event_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Notes__c</fullName>
        <inlineHelpText>Enter up to 32,768 characters</inlineHelpText>
        <label>Event Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Sponsor__c</fullName>
        <inlineHelpText>Enter the sponsor/group for this event</inlineHelpText>
        <label>Event Sponsor</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Athletic Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletic Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast - Buffet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast - Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic / Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner - Buffet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner - Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund Raiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intramurals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luncheon - Buffet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luncheon - Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting w/Snacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Volume__c</fullName>
        <inlineHelpText>Enter the number of people expected at this event</inlineHelpText>
        <label>Expected Attendance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Approver__c</fullName>
        <label>Location Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Location_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Blackout_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to schedule an event on a blackout date (requires special approval)</inlineHelpText>
        <label>Override Blackout Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_By_Time__c</fullName>
        <label>Ready By Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurrence_Daily_Type__c</fullName>
        <label>Recurrence Daily Type</label>
        <picklist>
            <picklistValues>
                <fullName>Every X day(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every weekday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Day_Of_Month__c</fullName>
        <label>Recurrence Day of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence_Days__c</fullName>
        <label>Recurrence Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence_End_Date__c</fullName>
        <label>Recurrence End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurrence_Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrence Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurrence_Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrence Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurrence_Monthly_Day_List1__c</fullName>
        <label>Recurrence Monthly Day List1</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Monthly_Day_List2__c</fullName>
        <label>Recurrence Monthly Day List2</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Monthly_Type__c</fullName>
        <label>Recurrence Monthly Type</label>
        <picklist>
            <picklistValues>
                <fullName>Day X of every Y month(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The X Y of every Z month(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Months1__c</fullName>
        <label>Recurrence Months1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence_Months2__c</fullName>
        <label>Recurrence Months2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence_Parent_Event__c</fullName>
        <label>Recurrence Parent Event</label>
        <referenceTo>VEM_Event__c</referenceTo>
        <relationshipLabel>Event Recurrences</relationshipLabel>
        <relationshipName>Recurrence_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurrence_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrence Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurrence_Start_Date__c</fullName>
        <label>Recurrence Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurrence_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrence Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurrence_Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrence Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurrence_Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrence Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurrence_Type__c</fullName>
        <label>Recurrence Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrence Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurrence_Weeks__c</fullName>
        <label>Recurrence_Weeks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence_Yearly_Day_List1__c</fullName>
        <label>Recurrence Yearly Day List1</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Yearly_Day_List2__c</fullName>
        <label>Recurrence Yearly Day List2</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Yearly_Day__c</fullName>
        <label>Recurrence Yearly Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence_Yearly_Month_List1__c</fullName>
        <label>Recurrence Yearly Month List1</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Yearly_Month_List2__c</fullName>
        <label>Recurrence Yearly Month List2</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Yearly_Type__c</fullName>
        <label>Recurrence Yearly Type</label>
        <picklist>
            <picklistValues>
                <fullName>Every X Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The X Y of Z</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_Account__c</fullName>
        <label>Sponsor Account</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Email__c</fullName>
        <label>Sponsor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sponsor_Phone__c</fullName>
        <label>Sponsor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <controllingField>Time_Interval__c</controllingField>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Interval__c</fullName>
        <inlineHelpText>Select the times to display in the drop-downs below; Select &quot;None&quot; for all-day events</inlineHelpText>
        <label>Time Interval</label>
        <picklist>
            <picklistValues>
                <fullName>15 Minute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Minute</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>60 Minute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VForceReports__c</fullName>
        <description>Visualforce page Reports</description>
        <label>VForceReports</label>
        <picklist>
            <picklistValues>
                <fullName>Today in the Connelly Center</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Today in Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This Week in Athletics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>Event_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>Athletics_All</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>Event_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_Approver__c</field>
            <operation>equals</operation>
            <value>Mick Keelan</value>
        </filters>
        <label>Athletics - All</label>
    </listViews>
    <listViews>
        <fullName>Athletics_Future</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>Event_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_Approver__c</field>
            <operation>equals</operation>
            <value>Mick Keelan</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Athletics - Future</label>
    </listViews>
    <listViews>
        <fullName>Athletics_Recurring</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>Recurrence_Type__c</columns>
        <columns>Event_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recurrence_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Location_Approver__c</field>
            <operation>equals</operation>
            <value>Mick Keelan</value>
        </filters>
        <label>Athletics - Recurring</label>
    </listViews>
    <listViews>
        <fullName>Connelly_All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>Event_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_Approver__c</field>
            <operation>equals</operation>
            <value>Anthony Alfano</value>
        </filters>
        <label>Connelly - All</label>
    </listViews>
    <listViews>
        <fullName>Connelly_Future</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>Event_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_Approver__c</field>
            <operation>equals</operation>
            <value>Anthony Alfano</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Connelly - Future</label>
    </listViews>
    <listViews>
        <fullName>Connelly_Recurring</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>Recurrence_Type__c</columns>
        <columns>Event_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recurrence_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Location_Approver__c</field>
            <operation>equals</operation>
            <value>Anthony Alfano</value>
        </filters>
        <label>Connelly - Recurring</label>
    </listViews>
    <listViews>
        <fullName>Future</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>Event_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Future</label>
    </listViews>
    <listViews>
        <fullName>Pending</fullName>
        <columns>NAME</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Sponsor__c</columns>
        <columns>Expected_Volume__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending</label>
    </listViews>
</CustomObject>